# Hobgoblin

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
benchmark/: AB_DROP_GENERIC.md  BENCHMARK.md  QUALITY.md  QUALITY_drop_generic.md  _summarize.py  ab_drop_generic.py  ab_strategies.py  eval_quality.py  run_benchmark.py
examples/: annotate_server.py  intel_report.py  wizard_claude_code.py
hobgoblin/: __init__.py  _model.py  anchors.py  associate.py  extract.py  items.py  match.py  military.py  packs.py  wizard.py
tests/: test_anchors.py  test_associate.py  test_extract.py  test_items.py  test_military.py  test_wizard.py
