[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hobgoblin"
version = "0.1.0"
description = "Cheap-first, goblin-first primitives for the work agents usually hand to deterministic tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9,<3.15"
authors = [{ name = "OldDominionRacing" }]
keywords = ["nlp", "spacy", "entity-extraction", "llm", "agents"]
dependencies = [
    "spacy>=3.7,<4",
    "usaddress>=0.5.10",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
llm = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/OldDominionRacing/Hobgoblin"

[tool.setuptools.packages.find]
include = ["hobgoblin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
